[package]
name = "github-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.10.0"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1.0"
clap = { version = "4.2.1", features = ["derive"] }
